refactor method signatures to use CurrentMember