@@ -9,18 +9,17 @@ import com.tissue.feature.activitylog.domain.ActivityLog;
 import com.tissue.feature.activitylog.domain.ActivityType;
 import com.tissue.feature.member.application.port.repository.MemberCommandRepository;
 import com.tissue.feature.member.domain.Member;
-import com.tissue.feature.project.application.dto.ProjectMemberContext;
 import com.tissue.feature.project.application.port.repository.ProjectCommandRepository;
 import com.tissue.feature.project.application.port.repository.ProjectMemberCommandRepository;
 import com.tissue.feature.project.domain.Project;
 import com.tissue.feature.project.domain.ProjectMember;
-import com.tissue.feature.project.domain.ProjectRole;
 import com.tissue.feature.workspace.application.port.repository.WorkspaceMemberCommandRepository;
 import com.tissue.feature.workspace.application.port.repository.WorkspaceRepository;
 import com.tissue.feature.workspace.domain.Workspace;
 import com.tissue.feature.workspace.domain.WorkspaceMember;
 import com.tissue.feature.workspace.domain.enums.WorkspaceRole;
 import com.tissue.shared.dto.CursorPageResponse;
+import com.tissue.shared.dto.IssueIdentifier;
 import com.tissue.shared.vo.EntityReference;
 import com.tissue.support.IntegrationTestSupport;
 import java.util.Map;
@@ -56,7 +55,6 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
     private Member actor;
     private Workspace workspace;
     private Project project;
-    private ProjectMemberContext actorContext;
 
     @BeforeEach
     void setupData() {
@@ -79,17 +77,6 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
         // add Member(actor) to Project
         ProjectMember actorProjectMember = ProjectMember.create(project, actorWsMember);
         projectMemberCommandRepository.save(actorProjectMember);
-
-        actorContext = new ProjectMemberContext(
-                actorProjectMember.getId(),
-                actor.getId(),
-                workspace.getId(),
-                workspace.getKey(),
-                project.getId(),
-                project.getKey(),
-                actorWsMember.getDisplayName(),
-                actorWsMember.getRole(),
-                ProjectRole.MEMBER);
     }
 
     @Test
@@ -115,8 +102,8 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
                 .build();
         activityLogCommandRepository.save(log2);
 
-        CursorPageResponse<ActivityLogResponse> response =
-                queryService.getIssueActivities(actorContext, issueKey, null, 10);
+        CursorPageResponse<ActivityLogResponse> response = queryService.getIssueActivities(
+                IssueIdentifier.of(workspace.getKey(), issueKey), actor.getId(), null, 10);
 
         assertThat(response.content()).hasSize(2);
         assertThat(response.content().get(0).id()).isEqualTo(log2.getId());
@@ -138,9 +125,9 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
         activityLogCommandRepository.save(log1);
 
         CursorPageResponse<ActivityLogResponse> response =
-                queryService.getSprintActivities(actorContext, sprintId, null, 10);
+                queryService.getSprintActivities(workspace.getKey(), sprintId, actor.getId(), null, 10);
 
         assertThat(response.content()).hasSize(1);
-        assertThat(response.content().get(0).id()).isEqualTo(log1.getId());
+        assertThat(response.content().getFirst().id()).isEqualTo(log1.getId());
     }
 }
